@@ -1,3 +1,11 @@
+2008-08-19  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/component/dvb/dvb-probe-channels.glade:
+	* flumotion/component/dvb/wizard_gtk.py:
+	Some minor style fixes.
+	Pulse the progress bar a bit more often with less progress,
+	reset it and set the label if we cannot find any channels.
+
 2008-07-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/wizard_gtk.py:
